# Intel-RealSense-R200-Point-Cloud-Capture

./: CMakeLists.txt  R200_PointCloudCapture.pro  R200_PointCloudCapture.pro.user.8bc071c  README.md
forms/: colorstream.ui  depthstream.ui  mainwindow.ui
include/: color_stream_window.h  depth_stream_window.h  mainwindow.h  realsense_wrapper.h  ui_mainwindow.h
installation_scripts/: install_librealsense  install_opengl  install_pcl1.7
installation_scripts/opencv-2.4.13/: install_opencv_2.4.13.sh
src/: color_stream_window.cpp  depth_stream_window.cpp  main.cpp  mainwindow.cpp  realsense_wrapper.cpp
