CMAKE_MINIMUM_REQUIRED(VERSION 2.6 FATAL_ERROR)
PROJECT(R200_PCC-0.0.1)

#Add Compile options
ADD_COMPILE_OPTIONS(-std=c++11 -fPIC -lusb-1.0 -lpthread)

#Find Package
FIND_PACKAGE(Qt5 REQUIRED COMPONENTS Widgets Core Test Concurrent)
FIND_PACKAGE(PCL 1.7.1 REQUIRED)
IF(NOT "${PCL_LIBRARIES}" STREQUAL "")
	LIST(REMOVE_ITEM PCL_LIBRARIES "vtkproj4")
ENDIF()
FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(GLUT REQUIRED)
# FIND_PACKAGE(Threads REQUIRED)
FIND_PACKAGE(PkgConfig REQUIRED)
FIND_PACKAGE(OpenCV REQUIRED)


#Include Directories
INCLUDE_DIRECTORIES(${PCL_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${Eigen_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${OpenGL_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${GLUT_INCLUDE_DIRS})

INCLUDE_DIRECTORIES("/usr/local/include/librealsense/")
INCLUDE_DIRECTORIES(${realsense_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${LIBUSB_1_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${GLEW_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${GLFW_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})

#Link Libraries
LINK_DIRECTORIES(${PCL_LIBRARY_DIRS})
LINK_DIRECTORIES(${GLUT_LIBRARY_DIRS})
LINK_DIRECTORIES(${OpenGL_LIBRARY_DIRS})

LINK_DIRECTORIES("/usr/local/lib")
SET(LIBREALSENSE ${LIBS} realsense)
LINK_DIRECTORIES(${realsense_LIBRARY})
LINK_DIRECTORIES(${GLEW_LIBRARY_DIR})
LINK_DIRECTORIES(${OpenCV_LIBRARY_DIRS})

# Add Libraries Definition
ADD_DEFINITIONS(${QT_DEFINITIONS})
ADD_DEFINITIONS(${PCL_DEFINITIONS})
ADD_DEFINITIONS(${OpenGL_DEFINITIONS})
ADD_DEFINITIONS(-std=c++0x)

#Package check
PKG_CHECK_MODULES(PC_LIBUSB REQUIRED libusb-1.0)

#Package Search
PKG_SEARCH_MODULE(GLFW REQUIRED glfw3)

# Set compilation flags
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -O3" ) # Release Perf mode

# Get All Header Files
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include/)
FILE(GLOB_RECURSE project_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/include/*.h")

# Get All Source Files
FILE(GLOB_RECURSE project_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")

# Get ALL forms files
FILE(GLOB_RECURSE project_FORMS "${CMAKE_CURRENT_SOURCE_DIR}/forms/*.ui")

# SET(project_FORMS "${CMAKE_CURRENT_SOURCE_DIR}/forms/mainwindow.ui")

QT5_WRAP_CPP(project_HEADERS_MOC ${project_HEADERS})
QT5_WRAP_UI(project_FORMS_HEADERS ${project_FORMS})

ADD_EXECUTABLE(R200PCC ${project_SOURCES} ${project_HEADERS_MOC} ${project_FORMS_HEADERS})

TARGET_LINK_LIBRARIES(R200PCC
					  ${Qt5_LIBRARIES} 
					  ${PCL_LIBRARIES}
					  ${OPENGL_LIBRARIES}
					  ${GLUT_LIBRARY}
					  ${OpenCV_LIBRARIES}
					  ${LIBREALSENSE}
					  ${GLEW_LIBRARY}
					  ${GLFW_LIBRARIES}
					  # ${CMAKE_THREAD_LIBS_INIT}
					  )